--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
-RewriteCond %{REQUEST_URI} !^/games/public/
+RewriteCond %{REQUEST_URI} !^.*/public/
 RewriteRule ^(.*)$ public/$1 [QSA,L]
