--- a/api2/project.lock.json
+++ b/api2/project.lock.json
@@ -9781,6 +9781,8 @@
       "Microsoft.AspNetCore.Authentication.Cookies >= 1.1.0",
       "Microsoft.AspNetCore.Diagnostics >= 1.1.0",
       "Microsoft.AspNetCore.Mvc >= 1.1.0",
+      "Microsoft.AspNetCore.Mvc.Razor >= 1.1.0",
+      "Microsoft.AspNetCore.Mvc.TagHelpers >= 1.1.0",
       "Microsoft.AspNetCore.Server.Kestrel >= 1.1.0",
       "Microsoft.AspNetCore.StaticFiles >= 1.1.0",
       "Microsoft.EntityFrameworkCore >= 1.1.0",
