--- a/api2/project.json
+++ b/api2/project.json
@@ -14,9 +14,7 @@
     "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
     "Microsoft.AspNetCore.StaticFiles": "1.1.0",
     "Microsoft.EntityFrameworkCore": "1.1.0",
-    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0",
-    "Microsoft.Extensions.Configuration.Json": "1.1.0",
-    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0"
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0"
   },
   "frameworks": {
     "netcoreapp1.0": {
