--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "main": "",
   "dependencies": {
     "bower": "^1.3.12",
-    "gulp": "^3.8.11",
-    "gulp-concat": "^2.5.2",
-    "gulp-uglify": "^1.1.0"
+    "uglify-js": "latest"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "cd public/js && uglifyjs app.js */*.js -o g.min.js --source-map g.min.js.map"
   },
   "author": "Per Mortensen",
   "license": "ISC"
