--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "uglify": "cd public/js && uglifyjs app.js */*.js -o g.min.js --source-map g.min.js.map",
-    "bower": "bower install",
-    "build": "npm run bower && npm run uglify"
+    "build": "cd public/js && uglifyjs app.js */*.js -o g.min.js --source-map g.min.js.map",
+    "postinstall": "bower install && npm run build"
   },
   "author": "Per Mortensen",
   "license": "ISC"
