--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "A game collection web app",
   "main": "",
   "dependencies": {
-    "bower": "^1.3.12",
-    "uglify-js": "latest"
+    "uglify-js": "latest",
+    "angular-loading-bar": "~0.7.0",
+    "chart.js": "~1.0.1",
+    "moment": "~2.9.0",
+    "angular-bootstrap": "~0.12.1",
+    "angular-upload": "~1.0.11"
   },
   "devDependencies": {},
   "scripts": {
-    "build": "cd public/js && uglifyjs app.js */*.js -o g.min.js --source-map g.min.js.map",
-    "postinstall": "bower install && npm run build"
+    "vendor:clean": "rm -rf public/vendor",
+    "vendor:copy": "mkdir public/vendor && cp node_modules/{angular-bootstrap/ui-bootstrap-tpls.min.js,angular-loading-bar/build/loading-bar.min.js,angular-loading-bar/build/loading-bar.min.css,angular-upload/angular-upload.min.js,chart.js/Chart.min.js,moment/min/moment.min.js} public/vendor",
+    "js:uglify": "cd public/js && uglifyjs app.js */*.js -o g.min.js --source-map g.min.js.map",
+    "build": "npm run vendor:clean && npm run vendor:copy && npm run js:uglify",
+    "postinstall": "npm run build"
   },
   "author": "Per Mortensen",
   "license": "ISC"
