--- a/package.json
+++ b/package.json
@@ -4,18 +4,28 @@
   "description": "A game collection web app",
   "main": "",
   "dependencies": {
-    "uglify-js": "latest",
-    "watch": "latest",
-    "angular-loading-bar": "~0.7.0",
+    "angular": "~1.5.8",
+    "angular-animate": "~1.5.8",
+    "angular-cookies": "~1.5.8",
+    "angular-loading-bar": "^0.9.0",
+    "angular-resource": "~1.5.8",
+    "angular-route": "~1.5.8",
+    "angular-ui-bootstrap": "^2.3.2",
+    "angular-upload": "~1.0.11",
+    "bootstrap": "^3.3.7",
     "chart.js": "~1.0.1",
+    "jquery": "^3.1.1",
     "moment": "~2.9.0",
-    "angular-bootstrap": "~0.12.1",
-    "angular-upload": "~1.0.11"
+    "uglify-js": "latest",
+    "watch": "latest"
   },
   "devDependencies": {},
   "scripts": {
     "vendor:clean": "rm -rf public/vendor",
-    "vendor:copy": "mkdir public/vendor && cp node_modules/angular-bootstrap/ui-bootstrap-tpls.min.js node_modules/angular-loading-bar/build/loading-bar.min.js node_modules/angular-loading-bar/build/loading-bar.min.css node_modules/angular-upload/angular-upload.min.js node_modules/chart.js/Chart.min.js node_modules/moment/min/moment.min.js public/vendor",
+    "vendor:copy": "mkdir public/vendor && mkdir public/vendor/{js,css,fonts} && npm run vendor:js && npm run vendor:css && npm run vendor:fonts",
+    "vendor:js": "cp node_modules/angular/angular.min.js node_modules/angular-animate/angular-animate.min.js node_modules/angular-cookies/angular-cookies.min.js node_modules/angular-resource/angular-resource.min.js node_modules/angular-route/angular-route.min.js node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js node_modules/angular-loading-bar/build/loading-bar.min.js node_modules/angular-upload/angular-upload.min.js node_modules/chart.js/Chart.min.js node_modules/moment/min/moment.min.js node_modules/jquery/dist/jquery.min.js node_modules/bootstrap/dist/js/bootstrap.min.js public/vendor/js",
+    "vendor:css": "cp node_modules/bootstrap/dist/css/bootstrap.min.css node_modules/angular-loading-bar/build/loading-bar.min.css public/vendor/css",
+    "vendor:fonts": "cp node_modules/bootstrap/dist/fonts/* public/vendor/fonts",
     "js:uglify": "cd public && uglifyjs js/app.js js/*/*.js -o g.min.js --source-map g.min.js.map",
     "build": "npm run vendor:clean && npm run vendor:copy && npm run js:uglify",
     "watch": "npm run build && watch 'npm run js:uglify' public/js",
