Updated project file

--- a/g_.csproj
+++ b/g_.csproj
@@ -1,14 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.0</TargetFramework>
-    <DebugType>portable</DebugType>
     <PreserveCompilationContext>true</PreserveCompilationContext>
-    <AssemblyName>g_</AssemblyName>
     <OutputType>Exe</OutputType>
-    <PackageId>g_</PackageId>
-    <PackageTargetFallback>$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
-    <RuntimeFrameworkVersion>1.1.1</RuntimeFrameworkVersion>
+    <PackageTargetFallback>$(PackageTargetFallback);netcoreapp</PackageTargetFallback>
   </PropertyGroup>
 
   <ItemGroup>
