--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "chart.js": "~1.0.1",
     "jquery": "^3.1.1",
     "moment": "~2.9.0",
-    "uglify-js": "latest",
-    "watch": "latest"
+    "uglify-js": "^3.0.6",
+    "watch": "^1.0.2"
   },
   "devDependencies": {},
   "scripts": {
@@ -26,7 +26,7 @@
     "vendor:js": "cp node_modules/angular/angular.min.js node_modules/angular-animate/angular-animate.min.js node_modules/angular-cookies/angular-cookies.min.js node_modules/angular-resource/angular-resource.min.js node_modules/angular-route/angular-route.min.js node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js node_modules/angular-loading-bar/build/loading-bar.min.js node_modules/angular-upload/angular-upload.min.js node_modules/chart.js/Chart.min.js node_modules/moment/min/moment.min.js node_modules/jquery/dist/jquery.min.js node_modules/bootstrap/dist/js/bootstrap.min.js public/vendor/js",
     "vendor:css": "cp node_modules/bootstrap/dist/css/bootstrap.min.css node_modules/angular-loading-bar/build/loading-bar.min.css public/vendor/css",
     "vendor:fonts": "cp node_modules/bootstrap/dist/fonts/* public/vendor/fonts",
-    "js:uglify": "cd public && uglifyjs js/app.js js/*/*.js -o g.min.js --source-map g.min.js.map",
+    "js:uglify": "cd public && uglifyjs js/app.js js/*/*.js -o g.min.js --source-map filename=g.min.js.map",
     "build": "npm run vendor:clean && npm run vendor:copy && npm run js:uglify",
     "watch": "npm run build && watch 'npm run js:uglify' public/js",
     "postinstall": "npm run build"
