--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,4 +1,6 @@
 {
     "signingKey": "b4ad2cd5-3440-4dc8-a3f6-23ea59889b18",
-    "dataDirectory": "../data"
+    "dataDirectory": "../data",
+    "database": "sqlite",
+    "connectionString": "Data Source=../data/games.db"
 }
