--- a/src/g_.csproj
+++ b/src/g_.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="Views\**\*;public\**\*;appsettings.json;appsettings.*.json">
+    <None Update="Views\**\*;wwwroot\**\*;appsettings.json;appsettings.*.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </None>
   </ItemGroup>
