--- a/src/g_.csproj
+++ b/src/g_.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <Target Name="NpmBuild" BeforeTargets="Build">
-    <Exec Command="cd Scripts &amp;&amp; npm run build" />
+    <Exec Command="cd VueApp &amp;&amp; npm run build" />
   </Target>
 
 </Project>
