--- a/src/VueApp/package.json
+++ b/src/VueApp/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.5.11"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.100",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
