--- a/src/VueApp/package.json
+++ b/src/VueApp/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.100",
