--- a/src/g_.csproj
+++ b/src/g_.csproj
@@ -1,27 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <PreserveCompilationContext>true</PreserveCompilationContext>
-    <OutputType>Exe</OutputType>
-    <AssetTargetFallback>$(AssetTargetFallback);netcoreapp</AssetTargetFallback>
-
-    <!-- Exclude node_modules from compilation as searching it slows msbuild to a crawl -->
-    <DefaultItemExcludes>$(DefaultItemExcludes);**\node_modules\**;node_modules\**</DefaultItemExcludes>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Update="Views\**\*;wwwroot\**\*;appsettings.json;appsettings.*.json">
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </None>
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
   </ItemGroup>
-
-  <Target Name="NpmBuild" BeforeTargets="Build">
-    <Exec Command="cd VueApp &amp;&amp; npm run build" />
-  </Target>
 
 </Project>
