--- a/src/VueApp/package.json
+++ b/src/VueApp/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "watch": "cross-env NODE_ENV=development webpack --progress --hide-modules --watch",
+    "start": "cross-env NODE_ENV=development webpack --progress --hide-modules --watch",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
