--- a/src/VueApp/package.json
+++ b/src/VueApp/package.json
@@ -6,26 +6,18 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack --progress --hide-modules --watch",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "start": "parcel watch --out-dir ../wwwroot --public-url / index.html",
+    "build": "parcel build --out-dir ../wwwroot --public-url / --no-cache --no-source-maps index.html"
   },
   "dependencies": {
     "lodash": "^4.17.4",
-    "vue": "^2.5.11",
+    "vue": "^2.5.17",
+    "vue-hot-reload-api": "^2.3.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.100",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-3": "^6.24.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.4",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "@vue/component-compiler-utils": "^2.2.0",
+    "parcel-bundler": "^1.9.7",
+    "vue-template-compiler": "^2.5.17"
   }
 }
