--- a/src/VueApp/package.json
+++ b/src/VueApp/package.json
@@ -10,14 +10,14 @@
     "build": "parcel build --out-dir ../wwwroot --public-url / --no-cache --no-source-maps index.html"
   },
   "dependencies": {
-    "lodash": "^4.17.4",
-    "vue": "^2.5.17",
-    "vue-hot-reload-api": "^2.3.0",
-    "vue-router": "^3.0.1"
+    "lodash": "^4.17.15",
+    "vue": "^2.6.10",
+    "vue-hot-reload-api": "^2.3.4",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@vue/component-compiler-utils": "^2.2.0",
-    "parcel-bundler": "^1.9.7",
-    "vue-template-compiler": "^2.5.17"
+    "@vue/component-compiler-utils": "^3.0.0",
+    "parcel": "^1.12.3",
+    "vue-template-compiler": "^2.6.10"
   }
 }
